--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -24,9 +24,11 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/three": "^0.177.0",
     "babel-plugin-glsl": "^1.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
+    "gltfjsx": "^6.5.3",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
